# svg-vectorizer-codex-plugin

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/gallery/real-world/: README.md  browser_review.json  gallery_manifest.json  source_metadata.json
docs/gallery/real-world/checkerboard-rgb-icon/auto/validation/: checkerboard_rgb_icon_auto_vtracer_assessment.json
docs/gallery/real-world/checkerboard-rgb-icon/checkerboard/validation/: checkerboard_rgb_icon_checkerboard_vtracer_assessment.json
docs/gallery/real-world/firefox-warm-gradient/pixel/validation/: firefox_warm_gradient_pixel_assessment.json
docs/gallery/real-world/firefox-warm-gradient/vtracer/validation/: firefox_warm_gradient_vtracer_assessment.json
docs/gallery/real-world/flower-photo/pixel/validation/: flower_photo_pixel_assessment.json
docs/verification/: claude-code-e2e.md  codex-e2e.md
plugins/svg-vectorizer/: .mcp.json
plugins/svg-vectorizer/.claude-plugin/: plugin.json
plugins/svg-vectorizer/.codex-plugin/: plugin.json
plugins/svg-vectorizer/server/: mcp-server.cjs  pipeline_cli.py  render_svg_with_resvg.cjs  requirements.txt  svg_vectorizer_pipeline.py
plugins/svg-vectorizer/skills/svg-vectorizer/: SKILL.md
tests/: test_claude_code_e2e.py  test_cli.py  test_codex_e2e.py  test_mcp_smoke.py  test_pipeline.py  test_plugin_manifests.py
(+5 files in other folders)
